src/style.css
/* ... */
input::placeholder {
	font-style: italic;
	color: #80808099;
	padding-left: 0.3125rem;
}
input:invalid {
	background: var(--error-bg);
}

@keyframes focus-switch {
	from {
		outline-offset: -5px;
		outline-width: 5px;
	}
}
:focus {
	outline: var(--T-focus-outline);
	outline-width: 2px;
	outline-offset: -2px;
	animation-name: focus-switch;
	animation-duration: 0.1s;
	animation-timing-function: linear;
	outline-style: solid;
}

textarea {
	;max-width: 100%
	;border: 2px solid var(--T-textarea-border-color)
	;border-radius: 0;
	;box-shadow: 0.125rem 0.1875rem 0.3125rem -0.1875rem #0D0D0D80
	;font: var(--T-font)
	;font-size: 0.8125em
	;color: var(--T-color)
	;background: var(--T-bg)
	;white-space: break-spaces; /* optional */
}
textarea-container {
	;border: 2px solid var(--T-textarea-border-color)
	;padding: 5px
	;background: var(--T-bg)
}
textarea-container > textarea {
	height: 2.625em; /* should be approx. line-height * 2 */
	min-height: 2.625em;
	box-shadow: none;
	border-radius: 0;
}
textarea-container > textarea:focus {
	outline: 5px solid #878;
	outline-offset: 3px;
	border-radius: 0;
	animation-name: none;
}
textarea-container, textarea-container > textarea {
	;max-height: 25vh
}
/* ios safari */
@supports (-webkit-touch-callout: none) {
	textarea, input, select {
		font-size: 16px;
	}
	input, select {
		line-height: 16px;
	}
	/* give space to the left so the cursor can reach there */
	textarea-container > textarea {
		padding-left: 2px;
		width: -webkit-fill-available; width: -moz-available; width: stretch;
	}
}


/**********
 ** Page **
 **********/

.errorPage {
	padding: 0.1875rem;
}

button.voteButton[data-selected][data-vote="g"] {
	;background: linear-gradient(var(--bggreen), #eee)
}
button.voteButton[data-selected][data-vote="b"] {
	;background: linear-gradient(var(--bgred), #eee)
}
button.voteButton[data-selected][data-vote="o"] {
	;background: linear-gradient(var(--bgblue), #eee)
}

/* TODO FIX */
/* todo fix more! so this is an issue because vote buttons are now messed up by the button container insertion system, and ummm... something about classes.. ugh*/

/* hecko yo */
.pageContents {
	max-width: 100%;
	overflow-x: auto;
	padding: 1.5rem;
}

.pageContents.Markup h2,
.pageContents.Markup h3,
.pageContents.Markup h4,
.pageContents.Markup h5 {
	margin-left: -1.5rem;
	margin-right: -1.5rem;
	padding-left: 1rem;
	padding-right: 1rem;
}

.pageInfoPane {
	;padding-left: 0.3125rem
	;padding-right: 0.3125rem
	;border-bottom: 1px solid var(--T-border-color)
	;background: var(--bar-bg)
	;box-shadow: var(--normal-shadow)
}
/*   idk   */
.page-container:not(#a) {
	min-height: 1rem;
	height: 40vh;
}

/* file viewer */

.fileThumbnail {
	;display: inline-block
	;width: 52px
	;height: 52px
	;cursor: pointer
}
.fileThumbnail > img {
	;box-sizing: content-box
	;max-width: 50px
	;max-height: 50px
	;border: 1px solid black
}
.fileView {
	;max-width: 100%
	;max-height: 100%
	;border: 1px solid black
}
.fileViewPane {
	;overflow: auto
}
html:not(.f-fileSelected) .fileSelected {
	;display: none
}

/***********
 ** Icons **
 ***********/
.iconBg {
	;background-repeat: no-repeat
	;background-size: contain
	;background-position: center
	;margin-left: 0.125rem
	;margin-right: 0.125rem
}

/* TODO: margin should be fullscreen mode by default, then disabled with @media (min-width) */ /* ? */

/* ehhh */
.half {
	;display: block
	;min-height: 1.125rem
	;line-height: 1.125rem
	;text-align: center
}
.half-label {
	;font-weight: bold
}

.image-box > img {
	;border: 1px solid black
}

.no-select {
	-webkit-user-select: none; user-select: none;
}


/* contain */
#\$sidebarBottom, .sidebarComment, #\$sidebarActivity > .linkBar {
	contain: strict;
}

.Markup {
	;"line-height: 1.2
	;overflow-y: hidden
	;overflow-x: auto
}

/* comment search results */
[data-slide="comments"] {
	;overflow-y: scroll
}
#\$commentSearchResults > div > .linkBar {
	;background: var(--bar-bg)
}

/* websocket state indicator */
html[data-socket-state="opening"] .toggle-sidebar {
	;--button-bg: linear-gradient(#6fb7c0, #6fb7c0, blue)
}
/*html[data-socket-state="open"] #\$openSidebar {
	;--button-bg: linear-gradient(#3f9f5f, #3f9f5f, green)
}*/
html[data-socket-pending] .toggle-sidebar {
	;--button-bg: linear-gradient(#e0c87f, #e0c87f, yellow)
}
html[data-socket-state="dead"] .toggle-sidebar {
	;--button-bg: linear-gradient(#f86060, #f86060, red)
}

/* markup stuff */
.M-spoiler-label {
	contain: none; /* the focus outline wasnt showing, idk why */
}
.M-spoiler-label:focus {
	border-color: var(--T-box-bg);
}
.Markup img:focus {
	outline-offset: 0;
	outline-width: 1px;
	outline-style: dotted;
}
.Markup img, .Markup video {
	-webkit-transition: max-height 0.25s ease;
	transition: max-height 0.25s ease;
}
.Markup [data-big] {
	max-height: 75vh;
}

#\$fileImage {
	max-width: 100%;
	height: auto;
	max-height: 75vh;
}

.images-thumbnails img {
	cursor: pointer;
	height: 60px;
	width: 60px;
	/*background-color: gray;*/
}

.images-current {
	max-height: 100%;
	max-width: 100%;
	border: 1px solid gray;
}

.images-container {
	flex-grow: 1;
}

